[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "human-browser-trajectory-recorder"
version = "0.1.0"
description = "CLI for recording human browser trajectories as Playwright traces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["playwright>=1.40,<2"]

[project.scripts]
human-browser-recorder = "human_browser_trajectory_recorder:main"

[tool.setuptools]
py-modules = ["human_browser_trajectory_recorder"]
